--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
-        "mariuzzo/laravel-js-localization": "^1.9"
+        "mariuzzo/laravel-js-localization": "^1.9",
+        "pulkitjalan/geoip": "^5.1"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
